# new_workflows

./: .gitignore  README.md  pyproject.toml
community/hi/: command.yml
community/workflows/hi/: main.py
custom/: config.yml.example
custom_example/: config.yml
custom_example/team_a/hi/: main.py
custom_example/team_b/hi/: main.py
custom_example/team_c/hi/: main.py
merico/env_mine/: command.yml
merico/env_mine/c1/: main_c1.py
merico/env_mine/c2/: command.yml  main_c2.py
merico/env_mine/c3/: main_c3.py
merico/env_mine/c3/d1/: command.yml  main_d1.py
merico/hi/: main.py
merico/lang/: command.yml  main.py
merico/lang/en/: main.py
merico/lang/jp/: main.py
merico/steps/: command.yml  main_1.py
merico/util/: openai.py
merico/workflows/: config.toml
merico/workflows/env_hers/: command.yml  main.py
merico/workflows/env_mine/: main.py
merico/workflows/env_mine/c1/: command.yml
merico/workflows/env_mine/c3/: command.yml
merico/workflows/hi/: main.py
merico/workflows/lang/: main.py
merico/workflows/lang/en/: main.py
merico/workflows/lang/jp/: main.py
merico/workflows/steps/: main_2.py
