[tool.poetry]
name = "workflows"
version = "0.1.0"
description = ""
authors = ["Mingjing <mingjing@merico.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
